--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,7 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+Assets/Resources/Polytope Studio/Lowpoly_Environments/SRP/PT_Nature_Free_URP_12.1.10.unitypackage.meta
+Assets/Resources/Polytope Studio/Lowpoly_Characters/SRP/PT_Peasants_Free_URP_10.10.1.unitypackage.meta
+Assets/Resources/Polytope Studio/Lowpoly_Characters/SRP/PT_Peasants_Free_URP_12.1.10.unitypackage.meta
+Assets/Resources/Polytope Studio/Lowpoly_Environments/SRP/PT_Nature_Free_URP_10.10.1.unitypackage.meta
